UtahLiveDataTest/src/objects/FedBudgetMain__c.object
<CustomObject>
    <fields>
        <fullName>BudgetAmountFormula__c</fullName>
        <formula>VALUE(BudgetAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Amount Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetAmount__c</fullName>
        <label>Budget Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>Fiscal Year</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEAComment__c</fullName>
        <label>LEA Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LEA_Comment__c</fullName>
        <label>LEA Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObjectCode__c</fullName>
        <label>Object Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramCode__c</fullName>
        <label>ProgramCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramComment__c</fullName>
        <label>ProgramComment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>FedBudgetMains</relationshipLabel>
        <relationshipName>FedBudgetMains</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubRecipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SubRecipient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FedBudgetMains</relationshipLabel>
        <relationshipName>FedBudgetMains</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueKeyFormula__c</fullName>
        <formula>Program__c + SubRecipient__c + ProgramCode__c + ObjectCode__c + FiscalYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueKeyFormula</label>
        <type>Text</type>
    </fields>
    <label>FedBudgetMain</label>
    <nameField>
        <label>FedFinancialMain Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FedBudgetMains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>